[tool.poetry]
name = "certbot-pskz"
version = "0.1.0"
description = "Certbot plugin for ps.kz DNS provider authenticator"
authors = ["Ivan Bartenev <bartenev.ivan.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/IvanRockMen/certbot-pskz"

packages = [{include = "certbot_pskz"}]

classifiers=[
	"Development Status :: 3 - Alpha",
	"Environment :: Plugins",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: MIT License",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Security",
	"Topic :: System :: Installation/Setup",
	"Topic :: System :: Networking",
	"Topic :: System :: System Administration",
	"Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.12"
acme = "^2.9.0"
certbot = "^2.9.0"
requests = "^2.31.0"
mock = "^5.1.0"
setuptools = "^69.1.1"
zope-interface = "^6.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."certbot.plugins"]
dns = "certbot_pskz.dns:Authenticator"
